--- a/templates/maps.html
+++ b/templates/maps.html
@@ -1,23 +1,49 @@
 <head>
     <title>Location</title>
 </head>
+<style>
+    table, th, td {
+      border:1px solid black;
+    }
+</style>
 <body>
     <h1 style="background-color: aqua;">Geolographical information finder</h1>
     <form action="/maps" method="post">
         <h2>Enter a place:</h2>
-        <textarea name="place" cols="50" rows="1">{{location}}</textarea>
+        <textarea name="location" cols="50" rows="1">{{location}}</textarea>
         <button type="submit">Search</button>
     </form>
     <a href="https://google.com/maps/place/{{location}}" target="_blank">See <b>{{location}}</b> on maps (for latitude, longitude, etc.)</a><br><br>
     <a href="https://google.com/search?q={{location}}+time+zone" target="_blank">Time zone of <b>{{location}}</b></a><br><br>
     <form action="/maps" method="post">
-        Save geographical information for the place <input type="text" name="rplace" placeholder="{{location}}" size="45"><br>
+        <h2>Register geographical information</h2>Place Name: <b><input type="text" name="location" value="{{location}}"></b><br>
         Longitude: <input type="number" min="-180" max="180" name="Longitude">
         East<input type="radio" name="EW" value="East">; West<input type="radio" name="EW" value="West">
         Latitude: <input type="number" min="-90" max="90" name="Latitude">
         North<input type="radio" name="NS" value="North">; South<input type="radio" name="NS" value="South"><br>
         Time zone--GMT: <input type="number" min="-12" max="12" name="GMT"><br>
-        <button type="submit">Register or Update</button>
+        <button type="submit">Register place</button>
+    </form>
+    <form action="/maps" method="post">
+        <h2>Registerd Places</h2>
+        <table>
+            <tr>
+                <th>No.</th><th>Place</th><th>Coordinate</th><th>Time Zone</th><th>Delete</th><th>Update</th>
+            </tr>
+            {% if table %}
+            {% for row in table %}
+            <tr>
+                <td>{{row[0]}}</td>
+                <td><input type="text" name="place{{row[0]}}" value="{{row[1]}}"></td>
+                <td><input type="text" name="coord{{row[0]}}" value="{{row[2]}}"></td>
+                <td><input type="text" name="gmt{{row[0]}}" value="GMT {{row[3]}}"></td>
+                <td><input type="checkbox" name="delete{{row[0]}}"></td>
+                <td><input type="checkbox" name="update{{row[0]}}"></td>
+            </tr>
+            {% endfor %}
+            {% endif %}
+        </table><br>
+        <button type="submit">Change</button>
     </form>
     <!-- <img src="{{url_for('static', filename='Image/yearth.png')}}" alt="sun" height="70%"> -->
 </body>
