maps page fix nonrtype issue improve design

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,11 @@
                 <input type="submit" name="info" value="More information">
                 <input type="submit" name="info" value="Contact us">
             </form> 
-            <form action="/maps" method="post" target="_blank">
-                <b><label for="location">Find or register a place</label></b>
+            <form action="/maps" method="post" target="_blank" name="place">
+                <b><label for="location">Find a new place</label></b>
                 <input type="text" name="location">
-                <button type="submit">Continue</button>
+                <button type="submit">Search</button>
+                <button type="submit">See registered places</button>
             </form>
             <form action="/" method="post" id="questions">
                 <h2>Describe all questions in words.</h2>
