--- a/templates/maps.html
+++ b/templates/maps.html
@@ -6,15 +6,19 @@
       border:1px solid black;
     }
 </style>
-<body>
+<body style="background-image: url('../static/Image/yearth.png');">
     <h1 style="background-color: aqua;">Geolographical information finder</h1>
-    <form action="/maps" method="post">
-        <h2>Enter a place:</h2>
+   
+    <form style="background-color: lightblue; text-indent:0%; width: max-content; padding: 10px;" action="/maps" method="post">
+        <h2>Search a place (location, time zone...)</h2>
         <textarea name="location" cols="50" rows="1">{{location}}</textarea>
-        <button type="submit">Search</button>
+        <button type="submit">Search</button><br>
+        {% if location %}
+        <a href="https://google.com/maps/place/{{location}}" target="_blank"><h4>See {{location.upper()}} on maps</h4></a>
+        <a href="https://google.com/search?q={{location}}+time+zone" target="_blank"><h4>Time zone of {{location.upper()}}</h4></a><br>
+        {% endif %}
     </form>
-    <a href="https://google.com/maps/place/{{location}}" target="_blank">See <b>{{location}}</b> on maps (for latitude, longitude, etc.)</a><br><br>
-    <a href="https://google.com/search?q={{location}}+time+zone" target="_blank">Time zone of <b>{{location}}</b></a><br><br>
+    <div style="background-color:lightgoldenrodyellow; text-indent:0%; width: max-content;  padding: 10px;">
     <form action="/maps" method="post">
         <h2>Register geographical information</h2>Place Name: <b><input type="text" name="location" value="{{location}}"></b><br>
         Longitude: <input type="number" min="-180" max="180" name="Longitude">
@@ -43,8 +47,8 @@
             {% endfor %}
             {% endif %}
         </table><br>
-        <button type="submit">Change</button>
-    </form>
+        <button type="submit">Confirm changes</button>
+    </form></div>
     <!-- <img src="{{url_for('static', filename='Image/yearth.png')}}" alt="sun" height="70%"> -->
 </body>
 
