--- a/templates/maps.html
+++ b/templates/maps.html
@@ -29,7 +29,7 @@
         <button type="submit">Register place</button>
     </form>
     <form action="/maps" method="post">
-        <h2>Registerd Places</h2>
+        <h2>Registered Places</h2>
         <table>
             <tr>
                 <th>No.</th><th>Place</th><th>Coordinate</th><th>Time Zone</th><th>Delete</th><th>Update</th>
