--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
     </style>
 </head>
 
-<body style="background-image: url('../static/Image/yearth.png');">
-    <!-- style="background-image: url('../static/Image/yearth.png');" -->
+<body style="background-image: url('../static/Image/yearthy.png');">
+    <!-- style="background-image: url('../static/Image/yearthy.png');" -->
     <h1 align="center">Y-EARTH | Interactive Sun Calculator 交互式太阳时空信息计算器</h1>
     <div class="row">
         <div class="column" style="background-color:lightgoldenrodyellow;">
@@ -41,15 +41,14 @@
                 <a href="/maps" target="_blank"><b>See registered places</b></a>
             </form>
             <form action="/" method="post" id="questions">
-                <h2>Describe what you would like to calculate</h2>
-                <b>Write any number of questions, starting each one in a new line</b><br>
-                    **Feel free to use the names of registered places instead of specifying all associated details! <br><br>
-                <textarea name="taskDesc" rows="5" cols="85"></textarea><br><br>     
-                <button type="submit">Summarize questions>></button>
+                <h2>Describe all requirements for calculation/plotting</h2>
+                <b>--Write any number of requirements, starting each one in a new line--</b><br>
+                <textarea name="taskDesc" rows="4" cols="85"></textarea><br><br>     
+                <button type="submit">Summarize descriptions>></button>
             </form>
             <form action="/" method="post" id="details">
-                <h2>Alternatively, fill in question details.</h2>
-                <b>What to calculate? (select 1 or more)</b><br>
+                <h2>Alternatively, fill in the details of requirements.</h2>
+                <b>--Select 1 or more to calculate/plot on y-axis--</b><br>
                 Sunrise<input type="checkbox" name="Sunrise">
                 ; Sunset<input type="checkbox" name="Sunset">
                 ; Solar Noon<input type="checkbox" name="Noon">
@@ -59,8 +58,13 @@
                 ; Local Time<input type="checkbox" name="QTime">
                 ; Time Zone<input type="checkbox" name="TZ">
                 ; Latitude<input type="checkbox" name="QLat">
+                <br><b>**For plotting only** What is the independent variable (on x-axis)?</b><br>
+                Date<input type="checkbox" name="PDate">
+                ; Local Time<input type="checkbox" name="PTime">
+                ; Latitude<input type="checkbox" name="PLat">
+                ; Altitude<input type="checkbox" name="PAlt"><br><br>
                 
-                <br><br><b>Given conditions (fill in only if needed)</b><br>
+                <b>--Given conditions (fill in those needed)--</b><br>
                 <label for="Longitude">Longitude: </label><input type="number" step="0.01" min="-180" max="180" name="Longitude"></label> 
                     <label for="East">East</label><input type="radio" name="EW" value="East"><label for="West">;West</label><input type="radio" name="EW" value="West">
                 , Latitude: <input type="number" step="0.01" min="-90" max="90" name="Latitude"></label>
@@ -81,20 +85,26 @@
         </div>
         <div class="column" style="background-color:aquamarine;">
             <form action="/" method="post">
-                <h2>Summary and calculation
+                <h2>Summary, calculation, and visualization
                 <button type="submit">Refresh All</button></h2>
 
                 {% for ab in abstracts %}
                     <b>-- Question {{ab.num}} -- </b><input type="submit" name="Reset{{ab.num}}" value="Resubmit"><br>
                     <textarea name="Question{{ab.num}}" cols="85" rows="2">{{ab.taskDesc}}</textarea>
-                    Question summary: <b>{{ab.interpret}}</b><br>
+                    Summary: <b>{{ab.interpret}}</b><br>
                     {% for cond in ab.conditions %}
                         <b style="padding: 25px;">*  {{cond}}</b><br>
                     {% endfor %}
                     Is the summary correct?
                     <input type="radio" name="adding" value="{{ab.num}}" form="details"><b>Add/Update details using the form | </b> 
-                    <input type="submit" name="Calculate{{ab.num}}" value="Confirm and calculate">
+                    <input type="submit" name="Calculate{{ab.num}}" value="Calculate"> |
+                    <input type="submit" name="Plot{{ab.num}}" value="Draw diagram">
+                    {% if ab.plot %}
+                    <textarea cols="80" rows="10">{{ab.plot}}</textarea>
+                    {% endif %}
+                    {% if ab.response %}
                     <textarea readonly rows="4", cols="80">{% for resp in ab.response %}{{resp}}{% endfor %}</textarea><br><br>
+                    {% endif %}
                 {% endfor %}
             </form>
         </div>
