--- a/templates/maps.html
+++ b/templates/maps.html
@@ -6,7 +6,7 @@
       border:1px solid black;
     }
 </style>
-<body style="background-image: url('../static/Image/yearthy.png');">
+<body style="background-image: url('../static/yearth.png');">
     <h1 style="background-color: aqua;">Geographical information finder</h1>
    
     <form style="background-color: lightblue; text-indent:0%; width: max-content; padding: 10px;" action="/maps" method="post">
@@ -49,6 +49,6 @@
         </table><br>
         <button type="submit">Confirm changes</button>
     </form></div>
-    <!-- <img src="{{url_for('static', filename='Image/yearthy.png')}}" alt="sun" height="70%"> -->
+    <!-- <img src="{{url_for('static', filename='Image/yearth.png')}}" alt="sun" height="70%"> -->
 </body>
 
