--- a/templates/maps.html
+++ b/templates/maps.html
@@ -6,8 +6,8 @@
       border:1px solid black;
     }
 </style>
-<body style="background-image: url('../static/yearth.png');">
-    <h1 style="background-color: aqua;">Geographical information finder</h1>
+<body style="background-image: url('../static/Image/yearth.png');">
+    <h1 style="background-color: aqua;"><a href="/">Sun Calculator</a> | Geographical information finder </h1>
    
     <form style="background-color: lightblue; text-indent:0%; width: max-content; padding: 10px;" action="/maps" method="post">
         <h2>Search a place (location, time zone...)</h2>
